Fixed z-index of feynman__link

--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -8,6 +8,7 @@
   text-decoration: none;
   color: black;
   opacity: 1;
+  z-index: 1;
   -webkit-transition: opacity 0.5s ease;
   -o-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
